{{$NEXT}}

- Fixed a bug where creating an iterator for a response with no items to
  iterate over would lead to an error being through when you called
  $iterator->next. This is now handled sanely, and next() returns undef like
  it should.


0.01     2016-03-07

- First release upon an unsuspecting world.